--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="/submit" method="POST">
+		<label for="name">Name:</label>
+		<input type="text" id="name" placeholder="Name"><br>
+		<label for="phone number">Phone Number:</label>
+		<input type="text" placeholder="Phone Number" id="phone"><br>
+		<label for="address">Address:</label>
+		<input id="address" placeholder="Address" type="text"><br>
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br>
+		<label for="multiselect">Please select your preferred breeds:</label>
+		<select id="multiselect">
+			<option value="Afghan Hound">Afghan Hound</option>
+			<option value="herding group">herding group</option>
+			<option value="German Shepherd">German Shepherd</option>
+			<option value="Siberian Husky">Siberian Husky</option>
+		</select><br>
+		<label for="submit">Submit:</label>
+		<input id="submit" type="submit" value="Submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
