--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<label for="checkbox">Have you ever lived with a Dog before?</label>
 		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br>
 		<label for="multiselect">Please select your preferred breeds:</label>
-		<select id="multiselect">
+		<select id="multiselect" multiple>
 			<option value="Afghan Hound">Afghan Hound</option>
 			<option value="herding group">herding group</option>
 			<option value="German Shepherd">German Shepherd</option>
